# company-management-system

./: .gitignore  alembic.ini  company.db  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 15befaa85420_initial_migration.py
app/core/security/: jwt.py  permissions.py
app/crud/: department.py  employee.py  user.py
app/database/: db.py
app/models/: department.py  employee.py  project.py  refresh_token.py  user.py
app/routers/: department.py  employee.py  project.py  user.py
app/schemas/: department.py  employee.py  user.py
