[project]
name = "company-management-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "alembic>=1.14.1",
    "bcrypt==4.0.1",
    "fastapi>=0.124.4",
    "passlib[bcrypt]>=1.7.4",
    "python-dotenv>=1.0.1",
    "python-jose>=3.4.0",
    "sqlalchemy>=2.0.51",
    "uvicorn>=0.33.0",
]
